Fix spacing in delete confirmation box

--- a/users/control/style.css
+++ b/users/control/style.css
@@ -420,7 +420,7 @@ summary{
     list-style: none;
 }
 #confpopup .areyousure {
-    font-family: "JetBrains Mono";
+    font-family: "JetBrains Mono", serif;
     padding: 10px;
     border-bottom: solid;
 }
@@ -439,7 +439,7 @@ summary{
     border-radius: 0 0 6px 6px;
     padding: 0;
     margin: 0;
-    font-family: Helvetica;
+    font-family: Helvetica, serif;
     font-size: 20px;
     cursor: pointer;
     letter-spacing: 1
@@ -510,9 +510,9 @@ summary{
 #dragdropform .draggable {
     width: fit-content;
     padding: 10px;
-    font-family: Arial;
-    -webkit-box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.4);
-    box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.4);
+    font-family: Arial, serif;
+    -webkit-box-shadow: 0 0 9px 1px rgba(0,0,0,0.4);
+    box-shadow: 0 0 9 1 rgba(0,0,0,0.4);
     border-radius: 4px;
     background-color: #555c8b;
     height: fit-content;
@@ -725,7 +725,7 @@ summary{
     max-width: 260px;
     background-color: #383B4F;
     border-radius: 6px;
-    font-family: Helvetica;
+    font-family: Helvetica, serif;
 }
 #zusammenfassung #clock {
     text-align: center;
